--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     command: mysqld --default-authentication-plugin=mysql_native_password
     volumes:
-      - ./mysql:/var/lib/mysql_01
+      - ./mysql:/var/lib/mysql
     env_file:
       - .env
     environment:
@@ -16,18 +16,21 @@ services:
     ports:
       - 3306:3306
     healthcheck:
-      test: ["CMD-SHELL", "exit | mysql -h localhost -P 3306 -u root -p$$MYSQL_ROOT_PASSWORD" ]
-      interval: 5s
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost --silent"]
+      interval: 10s
       timeout: 20s
-      retries: 30
+      retries: 10
 
   djangoproj:
     container_name: django-container
-    build: 
+    build:
       context: .
     restart: always
     env_file:
       - .env
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       - SQL_ROOT_PASSWORD=${SQL_ROOT_PASSWORD}
       - SQL_USER=${SQL_USER}
@@ -35,9 +38,6 @@ services:
       - SQL_DATABASE=${SQL_DATABASE}
       - SQL_HOST=${SQL_HOST}
       - SQL_ENGINE=${SQL_ENGINE}
-      - SQL_PORT=${SQL_PORT}  
+      - SQL_PORT=${SQL_PORT}
     ports:
       - 8000:8000
-
-
-      
